some sonarlint suggested improvements