@@ -8,15 +8,15 @@ import static org.mockito.Mockito.when;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.fasterxml.jackson.datatype.jsr310.ser.LocalDateTimeSerializer;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import org.fairdatapipeline.dataregistry.restclient.APIURL;
 import org.junit.jupiter.api.*;
 
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-public class file_typeTest {
+class file_typeTest {
   String json_url = "https://data.scrc.uk/api/file_type/5/?format=json";
   String json_lastupdated = "2021-03-04T14:43:57.160401Z";
   String json_name = "YAML Ain't Markup Language";
@@ -40,17 +40,15 @@ public class file_typeTest {
   RegistryFile_type expected;
 
   @BeforeAll
-  public void setUp() throws MalformedURLException {
+  public void setUp() throws URISyntaxException {
     url = mock(APIURL.class);
-    when(url.getUrl()).thenReturn(new URL(json_url));
+    when(url.getUri()).thenReturn(new URI(json_url));
     when(url.toString()).thenReturn(json_url);
-    when(url.getPath()).thenReturn(new URL(json_url).getPath());
+    when(url.getPath()).thenReturn(new URI(json_url).getPath());
     updated_by = mock(APIURL.class);
-    when(updated_by.getUrl()).thenReturn(new URL(json_updated_by));
-    when(updated_by.getPath()).thenReturn(new URL(json_updated_by).getPath());
+    when(updated_by.getUri()).thenReturn(new URI(json_updated_by));
+    when(updated_by.getPath()).thenReturn(new URI(json_updated_by).getPath());
     when(updated_by.toString()).thenReturn(json_updated_by);
-    // url = new APIURL("https://data.scrc.uk/api/file_type/5/?format=json");
-    // updated_by = new APIURL("https://data.scrc.uk/api/users/13/?format=json");
     expected = new RegistryFile_type();
     expected.setUrl(url);
     expected.setLast_updated(d);
@@ -60,7 +58,7 @@ public class file_typeTest {
   }
 
   @Test
-  public void testFile_typeReader() throws Exception {
+  void testFile_typeReader() throws Exception {
     RegistryFile_type from_json;
     ObjectMapper om = new ObjectMapper();
     om.registerModule(new JavaTimeModule());
